Use better defaults for running clusters with monotasks

--- a/templates/root/spark/conf/spark-defaults.conf
+++ b/templates/root/spark/conf/spark-defaults.conf
@@ -1,3 +1,7 @@
 spark.executor.memory	{{default_spark_mem}}
 spark.executor.extraLibraryPath	/root/ephemeral-hdfs/lib/native/
 spark.executor.extraClassPath	/root/ephemeral-hdfs/conf
+spark.continuousMonitor.logIntervalMillis 200
+spark.eventLog.enabled true
+spark.eventLog.dir file:///tmp/spark-events
+spark.shuffle.spill false
